
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/app/table";

import "prototype/type.proto";
import "prototype/multi_id.proto";

message so_extReward {
	prototype.reward_cashout_id    id                   =      1;
    uint64                         block_height         =      2;
    prototype.vest                 reward               =      3;
      
}


message so_list_extReward_by_block_height {
	uint64                      	block_height     = 1;
	prototype.reward_cashout_id 	id               = 2;
}


message so_unique_extReward_by_id {
	prototype.reward_cashout_id 	id               = 1;
}
